# TFG2

./: .gitignore  Papers info.docx  Títulos posibles.docx  fotos codigo.docx  ~$tos codigo.docx
Archivos Latex/: TFG.acn  TFG.acr  TFG.alg  TFG.aux  TFG.bbl  TFG.blg  TFG.glg  TFG.ist  (+7 more)
Codigo/Algoritmos postcuanticos/Faltan por precompilar/Test NTL/: CMakeLists.txt  ntl_build_script.ps1  unit_tests.c
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/Saber/: CMakeLists.txt
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/Saber/kat_test/: CMakeLists.txt  build_kat.ps1  saber.lib
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/Saber/kat_test/build_kat_fire/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SaberKAT.vcxproj  SaberKAT.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  saber_kat_tests.sln
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/Saber/kat_test/build_kat_fire/SaberKAT.dir/Release/: SaberKAT.exe.recipe  SaberKAT.vcxproj.FileListAbsolute.txt
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/Saber/kat_test/build_kat_fire/SaberKAT.dir/Release/SaberKAT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SaberKAT.lastbuildstate  SaberKAT.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/Saber/kat_test/build_kat_fire/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/Saber/kat_test/build_kat_fire/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/hqc-256/kat_test/: CMakeLists.txt
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/hqc-256/kat_test/build_kat_hqc_256/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HqcKAT.vcxproj  ZERO_CHECK.vcxproj  cmake_install.cmake
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/hqc-256/kat_test/build_kat_hqc_256/HqcKAT.dir/Release/: HqcKAT.vcxproj.FileListAbsolute.txt
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/hqc-256/kat_test/build_kat_hqc_256/HqcKAT.dir/Release/HqcKAT.tlog/: CL.write.1.tlog  link.secondary.1.tlog
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/kyber1024/: CMakeLists.txt
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/kyber1024/build_kyber1024/raw_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  cmake_install.cmake  kyber1024_shared.vcxproj  kyber1024_shared.vcxproj.filters
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/kyber1024/build_kyber1024/raw_build/kyber1024_shared.dir/Release/: kyber1024.dll.recipe
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/kyber1024/kat_test/: CMakeLists.txt  build_kat.ps1
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/kyber1024/kat_test/build_kat_1024/: KyberKAT.vcxproj  KyberKAT.vcxproj.filters
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/kyber1024/kat_test/build_kat_1024/KyberKAT.dir/Release/: KyberKAT.vcxproj.FileListAbsolute.txt
Codigo/Algoritmos postcuanticos/Precompilations/KAT_tests/kyber1024/kat_test/build_kat_1024/Release/: KyberKAT_2.rsp
Codigo/Algoritmos postcuanticos/Precompilations/lib_compilation/FireSaber/: CMakeLists.txt  build_saber.ps1  saber_wrapper.h
Codigo/Algoritmos postcuanticos/Precompilations/lib_compilation/hqc/: CMakeLists.txt
Codigo/Algoritmos postcuanticos/Precompilations/lib_compilation/kyber1024/: CMakeLists.txt
Codigo/Algoritmos postcuanticos/Windows/HQC/: CMakeLists.txt  hqcTest.ps1  main.c
Codigo/Algoritmos postcuanticos/kyber/windows/: CMakeLists.txt  main.c
Codigo/Algoritmospostcuanticos/Windows/SABER/: CMakeLists.txt  main.c
Codigo/Precompilations/KAT_tests/Saber/: CMakeLists.txt  build_saber.ps1  saber_wrapper.c
Codigo/Precompilations/KAT_tests/Saber/kat_test/: kat_test_file.c
Codigo/Precompilations/KAT_tests/Saber/kat_test/build_kat_fire/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  SaberKAT.vcxproj.filters  ZERO_CHECK.vcxproj
Codigo/Precompilations/KAT_tests/Saber/kat_test/build_kat_fire/Release/: FireSaberKAT_4.rsp
Codigo/Precompilations/KAT_tests/Saber/kat_test/build_kat_fire/SaberKAT.dir/Release/: SaberKAT.vcxproj.FileListAbsolute.txt
Codigo/Precompilations/KAT_tests/Saber/kat_test/build_kat_fire/SaberKAT.dir/Release/SaberKAT.tlog/: CL.command.1.tlog  CL.read.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Codigo/Precompilations/KAT_tests/Saber/kat_test/build_kat_fire/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
Codigo/Precompilations/KAT_tests/Saber/kat_test/build_kat_fire/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
Codigo/Precompilations/KAT_tests/hqc-256/: CMakeLists.txt  build_hqc.ps1  hqc.c  kem.c
Codigo/Precompilations/KAT_tests/hqc-256/kat_test/: build_kat.ps1  kat_test_file.c
Codigo/Precompilations/KAT_tests/hqc-256/kat_test/build_kat_hqc_256/: HqcKAT.vcxproj.filters  ZERO_CHECK.vcxproj.filters  hqc_kat_tests.sln
Codigo/Precompilations/KAT_tests/hqc-256/kat_test/build_kat_hqc_256/HqcKAT.dir/Release/: HqcKAT.exe.recipe
Codigo/Precompilations/KAT_tests/hqc-256/kat_test/build_kat_hqc_256/HqcKAT.dir/Release/HqcKAT.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  HqcKAT.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Codigo/Precompilations/KAT_tests/hqc-256/kat_test/build_kat_hqc_256/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
Codigo/Precompilations/KAT_tests/hqc-256/kat_test/build_kat_hqc_256/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
Codigo/Precompilations/KAT_tests/kyber512/kat_test/: CMakeLists.txt
Codigo/Precompilations/KAT_tests/kyber512/kat_test/build_kat_512/: CMakeCache.txt  cmake_install.cmake  kyber_kat_tests.sln
Codigo/Precompilations/KAT_tests/kyber512/kat_test/build_kat_512/KyberKAT.dir/Release/KyberKAT.tlog/: Cl.items.tlog
Codigo/Precompilations/KAT_tests/kyber512/kat_test/build_kat_512/Release/: KyberKAT_2.rsp
(+1514 files in other folders)
